--- a/about.html
+++ b/about.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>about</title>
+    <title>about page</title>
 </head>
 <body>
     
 </body>
+        <h1>About Page</h1>
 </html>
