Updated Index-About + Contact

--- a/about.html
+++ b/about.html
@@ -8,5 +8,6 @@
 <body>
     
 </body>
-        <h1>About Page</h1>
+         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto natus quasi modi voluptatibus. Alias distinctio ab in corrupti, necessitatibus possimus deleniti! Eaque repellat corporis praesentium magni dicta quisquam! Soluta, laboriosam?</p>
+
 </html>
