--- a/index.html
+++ b/index.html
@@ -2,11 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>splitmate</title>
+    <meta name="viewport" content="width=device-width, initial-scale=2.0">
+    <title>Splitmate</title>
 </head>
 <body>
-    
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto natus quasi modi voluptatibus. laboriosam?</p>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto</p>
+
+    <button>Submit</button>
+
+
 </body>
-       <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto natus quasi modi voluptatibus. Alias distinctio ab in corrupti, necessitatibus possimus deleniti! Eaque repellat corporis praesentium magni dicta quisquam! Soluta, laboriosam?</p>
-</html>
+       
+      </html>
