--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto</p>
 
     <button>Submit</button>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sequi velit rem maiores amet, sapie</p>
 
-
+    <button>Contact Submit</button>
 </body>
        
       </html>
