--- a/about.html
+++ b/about.html
@@ -8,10 +8,7 @@
 <body>
     
 </body>
-         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto natus quasi modi voluptatibus. Alias distinctio ab in corrupti, necessitatibus possimus deleniti! Eaque repellat corporis praesentium magni dicta quisquam! Soluta, laboriosam?</p>
-         <p>lorem 5</p>
-         </p>
-
-        <p>Lorem 5</p>
+         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto natus quasi modi voluptatibus. Alias quisquam! Soluta, laboriosam?</p>
+         
 
 </html>
